<?xml version="1.0"?>
<package format="2">

  <name>actuator_msgs</name>
  <version>1.0.0</version>
  <description>Defines messages for command and control of actuators.</description>
  <license>MIT</license>

  <author email="pcdangio@gmail.com">Paul D'Angio</author>
  <maintainer email="pcdangio@gmail.com">Paul D'Angio</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

</package>
